create: responsive tablet for header

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,10 @@
 // подключение переменных
 @import 'variables'  
-// Подключение базовых настроек
+// подключение базовых настроек
 @import 'settings'
 // подключение normalize
 @import 'normalize'
-// Стили для блока header
+// стили для блока header
 @import 'blocks/_header'
+// подключение стилей для адаптива
+@import 'media'
