create: mobile responsive for header

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,5 +4,7 @@ body
   font-family: 'Muli', sans-serif
   color: $text-color
 .container 
-  max-width: 1100px
+  max-width: 1110px
   margin: auto
+img 
+  max-width: 100%
