--- a/sass/blocks/_media.sass
+++ b/sass/blocks/_media.sass
@@ -4,6 +4,8 @@
 @media (max-width: 992px)
   .container
     max-width: 700px
+  .logo
+    width: 132px
   .navbar
     &-top
       padding-top: 30px
@@ -19,5 +21,25 @@
         line-height: 15
 @media (max-width: 768px)
   .container
-    max-width: 700px
+    max-width: 576px
     width: 92%
+  .navbar
+    &__search, &-menu, &__user
+      display: none
+  .menu
+    &-button
+      width: 16px
+      height: 11px
+      border: none
+      cursor: pointer
+      display: flex
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media (max-width: 576px)
+  .logo
+    width: 99px
