--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,12 @@ body {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1110px;
   margin: auto;
+}
+
+img {
+  max-width: 100%;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -368,97 +372,8 @@ template {
   margin-left: 108px;
 }
 
-.navbar-bottom {
-  background-color: #0A223D;
-}
-
-.navbar-menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 31px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #ffffff;
-}
-
-.navbar-menu__link {
-  color: inherit;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 18px;
-}
-
-.logo {
-  width: 177px;
-}
-
-.search {
-  display: flex;
-  position: relative;
-  overflow: hidden;
-  border-radius: 6px;
-  height: 40px;
-}
-
-.search__input {
-  width: 350px;
-  height: 100%;
-  padding-left: 23px;
-  padding-right: 75px;
-  background-color: #F5FAFE;
-  border: none;
-  font-size: 12px;
-  line-height: 15px;
-  color: #333333;
-}
-
-.search__button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 65px;
-  height: 100%;
-  border: none;
-  background-color: #EC1F46;
-}
-
-.user {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-}
-
-.user__avatar {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.user__name {
-  margin-left: 18px;
-  font-size: 14px;
-  line-height: 18px;
-  color: #333333;
-}
-
-.navbar {
-  background-color: #ffffff;
-}
-
-.navbar-top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.navbar__search {
-  margin-right: auto;
-  margin-left: 108px;
+.navbar__menu-button {
+  display: none;
 }
 
 .navbar-bottom {
@@ -535,5 +450,67 @@ template {
   font-size: 14px;
   line-height: 18px;
   color: #333333;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 700px;
+  }
+  .logo {
+    width: 132px;
+  }
+  .navbar-top {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .navbar__search {
+    margin-left: auto;
+    max-width: 340px;
+  }
+  .navbar-menu {
+    padding-top: 22px;
+    padding-bottom: 22px;
+  }
+  .navbar-menu__link {
+    font-size: 12px;
+    line-height: 15;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 576px;
+    width: 92%;
+  }
+  .navbar__search, .navbar-menu, .navbar__user {
+    display: none;
+  }
+  .menu-button {
+    width: 16px;
+    height: 11px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  .menu-button__line {
+    width: 16px;
+    height: 1px;
+    background-color: #333333;
+  }
+}
+
+@media (max-width: 576px) {
+  .logo {
+    width: 99px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
