--- a/css/style.css
+++ b/css/style.css
@@ -367,13 +367,13 @@ template {
   padding-bottom: 40px;
 }
 
+.navbar-top__menu-button {
+  display: none;
+}
+
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
-}
-
-.navbar__menu-button {
-  display: none;
 }
 
 .navbar-bottom {
@@ -471,7 +471,6 @@ template {
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
   }
   .navbar-menu {
     padding-top: 22px;
@@ -480,6 +479,9 @@ template {
   .navbar-menu__link {
     font-size: 12px;
     line-height: 15;
+  }
+  .search__input {
+    max-width: 340px;
   }
 }
 
@@ -494,6 +496,7 @@ template {
   .menu-button {
     width: 16px;
     height: 11px;
+    padding: 0;
     border: none;
     cursor: pointer;
     display: flex;
