--- a/sass/blocks/_media.sass
+++ b/sass/blocks/_media.sass
@@ -12,13 +12,15 @@
       padding-bottom: 30px
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size: 12px
         line-height: 15
+  .search
+    &__input
+      max-width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -30,6 +32,7 @@
     &-button
       width: 16px
       height: 11px
+      padding: 0
       border: none
       cursor: pointer
       display: flex
