--- a/sass/blocks/_media.sass
+++ b/sass/blocks/_media.sass
@@ -17,7 +17,7 @@
       padding-bottom: 22px
       &__link
         font-size: 12px
-        line-height: 15
+        line-height: 15px
   .search
     &__input
       max-width: 340px
