create: added breadcrumb

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,7 @@
 @import 'normalize'
 // стили для блока header
 @import 'blocks/_header'
+// подключаем хлебные крошки
+@import 'blocks/_breadcrumb'
 // подключение стилей для адаптива
 @import 'media'
