--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/_header'
 // подключаем хлебные крошки
 @import 'blocks/_breadcrumb'
+// стили блока отеля
+@import 'blocks/_hotel'
 // подключение стилей для адаптива
 @import 'media'
