--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -85,10 +85,10 @@
     background-position: center
     background-size: 10px
     background-color: transparent
-    &--next
+    &__next
       right: 18px
       background-image: url(../img/arrow-next.svg)
-    &--prev
+    &__prev
       left: 18px
       background-image: url(../img/arrow-prev.svg)
 .booking
@@ -166,7 +166,7 @@
     font-size: 14px;
     line-height: 19px
 .map
-  width: 347px
+  width: 100%
   height: 213px
   border-radius: 10px
   overflow: hidden
