--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -85,6 +85,7 @@
     background-position: center
     background-size: 10px
     background-color: transparent
+    outline: none
     &__next
       right: 18px
       background-image: url(../img/arrow-next.svg)
