fix: fix slider-btn

--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,7 @@ template {
   background-position: center;
   background-size: 10px;
   background-color: transparent;
+  outline: none;
 }
 
 .slider-button__next {
