fix: fix slider-btn

--- a/css/style.css
+++ b/css/style.css
@@ -601,12 +601,12 @@ template {
   outline: none;
 }
 
-.slider-button__next {
+.slider-button_next {
   right: 18px;
   background-image: url(../img/arrow-next.svg);
 }
 
-.slider-button__prev {
+.slider-button_prev {
   left: 18px;
   background-image: url(../img/arrow-prev.svg);
 }
