--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -86,10 +86,10 @@
     background-size: 10px
     background-color: transparent
     outline: none
-    &__next
+    &_next
       right: 18px
       background-image: url(../img/arrow-next.svg)
-    &__prev
+    &_prev
       left: 18px
       background-image: url(../img/arrow-prev.svg)
 .booking
