create: added newsletter & responsible

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/_breadcrumb'
 // стили блока отеля
 @import 'blocks/_hotel'
+// стили блока подписки
+@import 'blocks/_newsletter'
 // подключение стилей для адаптива
 @import 'media'
