create: added reviews slider & bagfix

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/_hotel'
 // стили блока подписки
 @import 'blocks/_newsletter'
+// стили блока отзывов
+@import 'blocks/_reviews'
 // подключение стилей для адаптива
 @import 'media'
