--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -3,8 +3,8 @@
     max-width: 960px
   .slider
     width: 600px
-  .swiper
-    &-slide
+  .hotel
+    &-slider
       &__image
         width: 100%
         height: 100%
@@ -36,12 +36,16 @@
       margin-bottom: 30px
     &-right
       flex-direction: row
+    &-slider
+      width: 100%
   .booking
     width: 340px
-  .slider
-    width: 100%
   .map
     width: 340px
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -83,12 +87,12 @@
         order: -1
         margin-left: 0
         margin-top: 4px
-  .slider
-    height: 350px
   .hotel
     &-right
       flex-direction: column
       min-height: 450px
+    &-slider
+      height: 350px
   .booking
     width: 100%
   .map
@@ -99,14 +103,30 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &:after, &:before
+          display: none
+      &__button
+        top: 45px
+        &_prev
+          left: 50%
+          transform: translate(-50%, 0)
+          margin-left: -65px
+        &_next
+          right: 50%
+          transform: translate(50%, 0)
+          margin-right: -65px
 @media (max-width: 576px)
   .logo
     width: 99px
-  .slider
-    height: 250px
   .hotel
     &__slider
       margin-bottom: 20px
+    &-slider
+      height: 250px
   .newsletter
     padding: 76px 0 83px 0
     &__title
