--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -119,6 +119,9 @@
           right: 50%
           transform: translate(50%, 0)
           margin-right: -65px
+    &__title
+      font-size: 30px
+      line-height: 38px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -133,3 +136,7 @@
       margin-bottom: 37px
   .subscribe
     width: 100%
+  .reviews
+    &__title
+      font-size: 18px
+      line-height: 23px
