--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,6 +11,9 @@
         width: 100%
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
@@ -48,6 +51,14 @@
     &-slider
       &__item
         max-width: 580px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 340px
+    height: 230px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -107,6 +118,7 @@
       flex-direction: column
       align-items: flex-start
   .reviews
+    padding-bottom: 60px
     &-slider
       &__item
         padding: 0 30px 30px
@@ -125,6 +137,11 @@
     &__title
       font-size: 30px
       line-height: 38px
+  .activities
+    padding: 60px 0 70px 0
+  .card
+    width: 48%
+    height: 255px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -152,6 +169,7 @@
       font-size: 12px;
       line-height: 15px;
   .reviews
+    padding-bottom: 50px
     &__title
       font-size: 18px
       line-height: 23px
@@ -159,3 +177,11 @@
     &-slider
       &__text
         text-align: left
+  .activities
+    padding: 40px 0 60px 0
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 36px
+  .card
+    width: 100%
