--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/_newsletter'
 // стили блока отзывов
 @import 'blocks/_reviews'
+// стили блока развлечений
+@import 'blocks/_activities'
 // подключение стилей для адаптива
 @import 'media'
