fix: fix ; in all sass

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -155,8 +155,8 @@
   .newsletter
     padding: 76px 0 83px 0
     &__title
-      font-size: 20px;
-      line-height: 25px;
+      font-size: 20px
+      line-height: 25px
       margin-bottom: 37px
     &-title
       &__strong
@@ -166,8 +166,8 @@
   .subscribe
     width: 100%
     &__button
-      font-size: 12px;
-      line-height: 15px;
+      font-size: 12px
+      line-height: 15px
   .reviews
     padding-bottom: 50px
     &__title
