--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -108,18 +108,18 @@
     display: flex
     flex-direction: column
   &__start
-    font-weight: normal;
-    font-size: 10px;
+    font-weight: normal
+    font-size: 10px
     line-height: 14px
   &__pricetag
-    font-style: normal;
-    font-weight: 800;
-    font-size: 24px;
-    line-height: 33px;
+    font-style: normal
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
   &__per-room
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
     line-height: 16px
   &__room
     margin-top: 4px
@@ -128,9 +128,9 @@
     align-items: center
     justify-content: space-between
     margin-bottom: 8px
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
     line-height: 16px
   &__description
     margin-left: 9px
@@ -139,20 +139,20 @@
     justify-content: space-between
     margin-bottom: 17px
   &__heading
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
   &__number
     display: flex
     align-items: center
     justify-content: space-between
     color: inherit
     text-decoration: none
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
   &__num
     margin-left: 8px
   &__button
@@ -163,9 +163,9 @@
     border: none
     color: $light
     cursor: pointer
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
+    font-style: normal
+    font-weight: 600
+    font-size: 14px
     line-height: 19px
 .map
   width: 100%
