--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -22,19 +22,19 @@
     display: flex
     flex-direction: column
     color: $light
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
+    font-style: normal
+    font-weight: 300
+    font-size: 24px
     line-height: 30px
     &__strong
-      font-size: 36px;
-      line-height: 45px;
+      font-size: 36px
+      line-height: 45px
       text-transform: uppercase
 .subscribe
   position: relative
   width: 350px
   height: 55px
-  border-radius: 4px;
+  border-radius: 4px
   overflow: hidden
   &__input
     position: absolute
@@ -43,10 +43,10 @@
     border: none
     padding-left: 33px
     padding-right: 75px
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 18px;
+    font-style: normal
+    font-weight: 300
+    font-size: 14px
+    line-height: 18px
   &__button
     position: absolute
     min-width: 65px
