--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -2,7 +2,7 @@
   .container 
     max-width: 960px
   .slider
-    width: 600px
+    width: 60 0px
   .hotel
     &__slider
       margin-right: 22px
