fix: minifix media.sass

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -171,9 +171,11 @@
   .reviews
     padding-bottom: 50px
     &__title
+      max-width: 245px
+      margin: auto
+      margin-bottom: 42px
       font-size: 18px
       line-height: 23px
-      margin-bottom: 42px
     &-slider
       &__text
         text-align: left
