--- a/css/style.css
+++ b/css/style.css
@@ -1214,9 +1214,11 @@ template {
     padding-bottom: 50px;
   }
   .reviews__title {
+    max-width: 245px;
+    margin: auto;
+    margin-bottom: 42px;
     font-size: 18px;
     line-height: 23px;
-    margin-bottom: 42px;
   }
   .reviews-slider__text {
     text-align: left;
