create: added footer

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/_reviews'
 // стили блока развлечений
 @import 'blocks/_activities'
+// стили блока подвала
+@import 'blocks/_footer'
 // подключение стилей для адаптива
 @import 'media'
