--- a/css/style.css
+++ b/css/style.css
@@ -1006,6 +1006,7 @@ template {
   grid-template-columns: repeat(4, minmax(min-content, 1fr));
   grid-gap: 20px;
   grid-auto-rows: minmax(40px, min-content);
+  margin-bottom: 95px;
 }
 
 .footer__logo {
@@ -1140,16 +1141,17 @@ template {
 }
 
 .footer-bottom {
-  display: flex;
-  grid-column: span 4;
-  align-items: center;
-  justify-content: center;
+  margin-top: 20px;
+  display: grid;
+  grid-template: 1fr/repeat(3, 1fr);
+  max-width: 1200px;
+  padding: 25px 15px;
+  margin: auto;
 }
 
 .footer-bottom__ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template: 1fr/repeat(3, minmax(116px, 1fr));
   list-style: none;
   margin: 0;
   padding: 0;
@@ -1164,8 +1166,27 @@ template {
   color: #ffffff;
 }
 
-.footer-bottom__image {
-  object-fit: cover;
+.footer-bottom__leftside {
+  grid-column-start: 2;
+}
+
+.footer-bottom__rightside {
+  display: grid;
+  justify-content: flex-end;
+}
+
+.footer-bottom__ul_r {
+  display: flex;
+  align-items: center;
+  max-width: 136px;
+  height: 22px;
+  list-style: none;
+  margin: 0 10px 10px 0;
+  padding: 0;
+}
+
+.footer-bottom__image_item {
+  margin: 0 4px 0 4px;
 }
 
 @media (max-width: 1200px) {
