--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -8,6 +8,7 @@
     grid-template-columns: repeat(4, minmax(min-content, 1fr))
     grid-gap: 20px
     grid-auto-rows: minmax(40px, min-content)
+    margin-bottom: 95px
   &__logo
     width: 166px
     grid-row: 1 / 3
@@ -105,15 +106,15 @@
     line-height: 15px
     color: #E0E0E0
   &-bottom
-    display: flex
-    grid-column: span 4
-    // grid-template: 1fr / repeat(2, 50%)
-    align-items: center
-    justify-content: center
+    margin-top: 20px
+    display: grid
+    grid-template: 1fr / repeat(3, 1fr)
+    max-width: 1200px
+    padding: 25px 15px
+    margin: auto
     &__ul
-      display: flex
-      justify-content: center
-      align-items: center
+      display: grid
+      grid-template: 1fr / repeat(3, minmax(116px, 1fr))
       list-style: none
       margin: 0
       padding: 0
@@ -124,5 +125,18 @@
       font-size: 12px
       line-height: 15px
       color: $light
-    &__image
-      object-fit: cover
+    &__leftside
+      grid-column-start: 2
+    &__rightside
+      display: grid
+      justify-content: flex-end
+    &__ul_r
+      display: flex
+      align-items: center
+      max-width: 136px
+      height: 22px
+      list-style: none
+      margin: 0 10px 10px 0
+      padding: 0
+    &__image_item
+      margin: 0 4px 0 4px
