--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -109,19 +109,18 @@
   &-bottom
     display: grid
     grid-template: 1fr / repeat(3, 1fr)
-    // max-width: 1200px
-    // margin: auto
     &__leftside
       grid-column-start: 2
+      margin-left: auto
+      margin-right: 35px
     &__rightside
       display: grid
-      // grid-template: 1fr / repeat(5, 80px)
       justify-content: flex-end
 .ul
   &-links
     display: grid
     grid-template: 1fr / repeat(3, auto)
-    grid-gap: 15px
+    grid-gap: 5px
     list-style: none
     margin: 0
     padding: 0
