--- a/css/style.css
+++ b/css/style.css
@@ -1110,7 +1110,7 @@ template {
   background-color: #fff;
   border-radius: 4px;
   padding: 23px;
-  width: 545px;
+  max-width: 545px;
   height: 123px;
   border: none;
   flex-basis: 100%;
