--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -81,7 +81,7 @@
     background-color: #fff
     border-radius: 4px
     padding: 23px
-    width: 545px
+    max-width: 545px
     height: 123px
     border: none
     flex-basis: 100%
