fix: fixed booking

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -230,6 +230,8 @@
       margin-bottom: 36px
   .card
     width: 100%
+  .booking
+    margin-bottom: 20px
   .footer
     padding-bottom: 21px
     &-wrapper
