--- a/css/style.css
+++ b/css/style.css
@@ -1480,6 +1480,9 @@ template {
   .card {
     width: 100%;
   }
+  .booking {
+    margin-bottom: 20px;
+  }
   .footer {
     padding-bottom: 21px;
   }
