fix: fix ul>links

--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -119,7 +119,7 @@
 .ul
   &-links
     display: grid
-    grid-template: 1fr / repeat(3, auto)
+    grid-template: 1fr / repeat(3, max-content)
     grid-gap: 5px
     list-style: none
     margin: 0
