--- a/css/style.css
+++ b/css/style.css
@@ -1158,7 +1158,7 @@ template {
 
 .ul-links {
   display: grid;
-  grid-template: 1fr/repeat(3, auto);
+  grid-template: 1fr/repeat(3, max-content);
   grid-gap: 5px;
   list-style: none;
   margin: 0;
