--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -90,6 +90,11 @@
       &-form
         grid-column: span 5
         grid-row: 4
+    &-bottom
+      &__leftside
+        grid-column-start: 1
+      &__rightside
+        grid-column-start: 3
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -176,12 +181,6 @@
   .footer
     &__input
       flex-basis: 100%
-    &-bottom
-      grid-template: repeat(2, 1fr) / 1fr
-      &__leftside
-        grid-row-start: 1
-      &__rightside
-        justify-content: flex-start
   .ul
     &-links
       max-width: 300px
@@ -276,3 +275,5 @@
       &__leftside
         grid-column-start: 1
         margin: 0 0 20px 0
+      &__rightside
+        grid-column-start: 1
