--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,10 @@ template {
   line-height: 18px;
 }
 
+.navbar-menu__item__mobile_visible {
+  display: none;
+}
+
 .logo {
   width: 177px;
 }
@@ -1230,6 +1234,8 @@ template {
     padding-bottom: 22px;
   }
   .navbar-menu__link {
+    font-style: normal;
+    font-weight: bold;
     font-size: 12px;
     line-height: 15px;
   }
@@ -1314,8 +1320,52 @@ template {
     max-width: 576px;
     width: 92%;
   }
-  .navbar__search, .navbar-menu, .navbar__user {
+  body {
+    padding-top: 78px;
+  }
+  .navbar__mobile_fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .navbar__search__mobile_hidden, .navbar__user__mobile_hidden {
     display: none;
+  }
+  .navbar__search__mobile_visible, .navbar__user__mobile_visible {
+    display: flex;
+  }
+  .navbar__user {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .navbar-bottom {
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 78px;
+  }
+  .navbar-bottom__visible {
+    display: block;
+  }
+  .navbar-menu {
+    flex-direction: column;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+    font-style: normal;
+    font-weight: bold;
+  }
+  .navbar-menu__item__mobile_visible {
+    display: block;
+  }
+  .user__name_light {
+    color: #ffffff;
+    margin-left: 0;
+    margin-top: 10px;
   }
   .menu-button {
     width: 16px;
@@ -1440,6 +1490,9 @@ template {
   }
   .hotel-slider {
     height: 250px;
+  }
+  .search__input {
+    max-width: 245px;
   }
   .newsletter {
     padding: 76px 0 83px 0;
