--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -149,6 +149,7 @@
       padding: 0
       border: none
       cursor: pointer
+      outline: none
       display: flex
       align-items: center
       justify-content: space-between
