create: added modal

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/_activities'
 // стили блока подвала
 @import 'blocks/_footer'
+// стили для всплывающего окна
+@import 'blocks/_modal'
 // подключение стилей для адаптива
 @import 'media'
