--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -95,6 +95,9 @@
         grid-column-start: 1
       &__rightside
         grid-column-start: 3
+  .modal
+    &__info
+      margin-top: 5px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -225,6 +228,9 @@
   .ul
     &-links
       max-width: 300px
+  .modal
+    &__info
+      margin-top: 5px
 @media (max-width: 720px)
   .footer
     &-bottom
@@ -327,3 +333,10 @@
         margin: 0 0 20px 0
       &__rightside
         grid-column-start: 1
+  .modal
+    &__dialog
+      padding: 30px 76px
+    &__input
+      padding: 0 18px
+    &__info
+      margin-top: 5px
