--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -335,6 +335,7 @@
         grid-column-start: 1
   .modal
     &__dialog
+      width: 90%
       padding: 20px 25px
     &__input
       padding: 0 18px
