--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -231,6 +231,9 @@
   .modal
     &__info
       margin-top: 5px
+  .modal
+    &__dialog
+      width: 90%
 @media (max-width: 720px)
   .footer
     &-bottom
@@ -335,7 +338,6 @@
         grid-column-start: 1
   .modal
     &__dialog
-      width: 90%
       padding: 20px 25px
     &__input
       padding: 0 18px
