--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -72,10 +72,12 @@
   &__input
     margin-bottom: 15px
     flex-basis: 48%
+    color: #BDBDBD
   &__message
     height: 123px
     flex-basis: 100%
     margin-bottom: 23px
+    color: #BDBDBD
   &__info
     font-style: normal
     font-weight: bold
