--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -70,9 +70,11 @@
     text-decoration: none
     color: inherit
   &__input
-    margin-bottom: 15px
-    flex-basis: 48%
+    width: 100%
     color: #BDBDBD
+    &_group
+      margin-bottom: 15px
+      flex-basis: 48%
   &__message
     height: 123px
     flex-basis: 100%
