--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -52,11 +52,13 @@
     text-align: center
   &__input
     width: 100%
-    margin-bottom: 15px
+    margin-top: 15px
   &__message
     width: 100%
     min-height: 123px
-    margin-bottom: 15px
+    margin-top: 15px
+  &__button
+    margin-top: 15px
   &__info
     font-style: normal
     font-weight: bold
