--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -16,7 +16,8 @@
     height: 230px
   .footer
     &__input
-      flex-basis: 100%
+      &_group
+        flex-basis: 100%
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
@@ -67,7 +68,8 @@
       grid-template-columns: repeat(6, 1fr)
       grid-row-gap: 40px
     &__input
-      flex-basis: 49%
+      &_group
+        flex-basis: 48%
     &__logo
       grid-row: 1 / 2
       grid-column: span 2
@@ -224,7 +226,8 @@
     height: 255px
   .footer
     &__input
-      flex-basis: 100%
+      &_group
+        flex-basis: 100%
   .ul
     &-links
       max-width: 300px
